# dpr_simulator

./: Cargo.toml  README.md  example_2e_gunslinger.md  example_5e_barbarian.md  example_pf2e_melee.md  examples.md  structure.md
docs/: example_2e_baseline.md  example_2e_druid.md  example_2e_gunslinger.md  example_2e_melee.md  example_2e_mutagenist.md  example_5e_barbarian.md
envs/: python.yaml
src/: attack_profile.rs  attackprofile.rs  damageelement.rs  dice.rs  dicecontext.rs  lib.rs  main.rs  roll_collection.rs  static_modifier.rs  turnsimluation.rs  turnsimulation.rs  weapon.rs
