[package]
name = "dpr_simulator"
version = "0.6.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
once_cell = "1.20.2"
polars = { version = "0.42.0", features = ["lazy", "parquet"] }
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.9.1"
simple-error = "0.3.0"

[lib]
doctest = false
